Introduce the ReaderM and WriterM monads.
ReaderM can only read arrays and references, while WriterM is also
allowed to create new ones and change them.

--- a/robinhood.cabal
+++ b/robinhood.cabal
@@ -19,8 +19,9 @@ library
   exposed-modules:
     Data.HashMap.RobinHood.Base
 
-  other-modules:       
+  other-modules:
     Data.HashMap.RobinHood.Ref
+    Data.HashMap.RobinHood.Monad
 
   other-extensions:
     BangPatterns
