Create pure RobinHood hash maps.
Expose the start of a new ST-based API.

--- a/robinhood.cabal
+++ b/robinhood.cabal
@@ -18,6 +18,7 @@ library
 
   exposed-modules:
     Data.HashMap.RobinHood.Base
+    Data.HashMap.RobinHood.ST
 
   other-modules:
     Data.HashMap.RobinHood.Ref
