--- a/robinhood.cabal
+++ b/robinhood.cabal
@@ -9,8 +9,9 @@ maintainer:          kolmodin@gmail.com
 copyright:           2013 Google Inc.
 category:            Data
 build-type:          Simple
--- extra-source-files:  
 cabal-version:       >=1.10
+extra-source-files:
+  README.md
 
 library
   default-language:
@@ -36,3 +37,16 @@ library
     primitive == 0.5.*,
     hashable == 1.2.*,
     vector == 0.10.*
+
+executable example
+  default-language:
+    Haskell2010
+
+  main-is: example.hs
+
+  hs-source-dirs: tests
+
+  build-depends:
+    base == 4.6.*,
+    robinhood,
+    unordered-containers
