Create wrapper around the RH type.
The wrapper holds a reference to the real RH data type.
When 'insert' needs to grow we update the reference in the wrapper.

--- a/robinhood.cabal
+++ b/robinhood.cabal
@@ -23,6 +23,7 @@ library
     Data.HashMap.RobinHood.ST
 
   other-modules:
+    Data.HashMap.RobinHood.Internal
     Data.HashMap.RobinHood.Ref
     Data.HashMap.RobinHood.Monad
 
